LCAM-1025-fixed warning